--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-image: url('background-texture.png'); /* Add your texture image here */
+            background-image: url('../static/img/background-texture.png'); /* Add your texture image here */
             background-size: cover;
             margin: 0;
             padding: 0;
@@ -58,10 +58,10 @@
 </head>
 <body>
 <div class="container">
-    <img src="icon.png" alt="Success Icon" class="login-image"> <!-- Add your image here -->
+    <img src="../static/img/icon.png" alt="Success Icon" class="login-image"> <!-- Add your image here -->
     <h1 class="header">Login Successful</h1>
     <p class="message">Welcome back! Your login was successful.</p>
-    <button class="button" onclick="window.location.href='homepage.html';">Go to Homepage</button>
+    <button class="button" onclick="window.location.href='http://localhost:8080/app';">Go to Homepage</button>
 </div>
 </body>
 </html>
