--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Successful Login</title>
-    <style>
+    <style th:inline="text">
         body {
             font-family: 'Arial', sans-serif;
-            background-image: url('../static/img/background-texture.png'); /* Add your texture image here */
+            background-image: url(../img/background-texture.png); /* Add your texture image here */
             background-size: cover;
             margin: 0;
             padding: 0;
@@ -58,10 +58,10 @@
 </head>
 <body>
 <div class="container">
-    <img src="../static/img/icon.png" alt="Success Icon" class="login-image"> <!-- Add your image here -->
+    <img src="../static/img/icon.png" th:src="@{img/icon.png}" alt="Success Icon" class="login-image"> <!-- Add your image here -->
     <h1 class="header">Login Successful</h1>
     <p class="message">Welcome back! Your login was successful.</p>
-    <button class="button" onclick="window.location.href='http://localhost:8080/app';">Go to Homepage</button>
+    <button class="button" onclick="window.location.href='http://localhost:8080/';">Go to Homepage</button>
 </div>
 </body>
 </html>
