--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -96,10 +96,9 @@
 <body>
 
 <div class="navbar">
-    <a href="#home">Home</a>
-    <a href="#cards">Game Cards</a>
-    <a href="#support">Support Us</a>
-    <a href="#hr">HR</a>
+    <a href="http://localhost:8080/">Home</a>
+    <a href="http://localhost:8080/cards/all">Game Cards</a>
+    <a href="http://localhost:8080/support">Support Us</a>
 </div>
 
 <div class="news-section">
