--- a/src/main/resources/templates/cardView.html
+++ b/src/main/resources/templates/cardView.html
@@ -28,8 +28,8 @@
                 z-index: -1; /* Place the pseudo-element behind the content */
             }
             #image-container img {
-                width: auto;   /* Set the width to your desired standard size */
-                height: 500px;   /* This will keep the aspect ratio intact */
+                width: 80%;   /* Set the width to your desired standard size */
+                height: auto;   /* This will keep the aspect ratio intact */
                 display: block; /* This will prevent inline spacing issues */
                 margin: 0 auto; /* This centers the image in the container if the container is wider */
             }
@@ -120,15 +120,26 @@
             .navbar a:hover {
                 background-color: #026752;
             }
+            .navbar .profile-button {
+                float: right; /* This will align the button to the right */
+                background-color: #026752; /* A distinct color for the profile button */
+                border: none; /* Removes the border if there's any */
+                cursor: pointer; /* Changes the cursor to signify it's clickable */
+            }
 
+            /* Hover effect for profile button */
+            .navbar .profile-button:hover {
+                background-color: #014d40; /* Darken button on hover */
+            }
         </style>
 </head>
 <body>
 
 <div class="navbar">
     <a href="http://localhost:8080/">Home</a>
-    <a href="http://localhost:8080/cards/all">Game Cards</a>
+    <a href="http://localhost:8080/all-cards">Game Cards</a>
     <a href="http://localhost:8080/support">Support Us</a>
+    <a href="http://localhost:8080/profile" class="profile-button">Profile</a>
 </div>
 
 <div id="cardInfo">
