Docker, minor improvements

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -115,16 +115,25 @@
 
 <div class="news-section">
     <div class="news-article">
-        <img src="../img/news-image1.jpg" alt="News Image">
-        <h2>Latest News Title</h2>
-        <p>Some description for the latest news...</p>
+        <img src="../img/news-image2.png" alt="News Image">
+        <h2>Happy News! Project initiated.</h2>
+        <p>Exciting developments are underway as we proudly announce the initiation of our much-anticipated project, bringing joy and anticipation to gaming enthusiasts worldwide. Stay tuned for a thrilling journey filled with innovation, entertainment, and immersive experiences. Happy times ahead with our groundbreaking project! #GamingJoy #ProjectInitiated 🎮🌟</p>
     </div>
     <div class="news-article">
-        <img src="../img/news-image2.jpg" alt="News Image">
-        <h2>Another News Title</h2>
-        <p>Some other news description...</p>
+        <img src="../img/news-image1.png" alt="News Image">
+        <h2>Our site is released! Wait for new posts.</h2>
+        <p>Great news, everyone! Our eagerly awaited website is now live and ready for exploration. Get ready to embark on an adventure with us as we gear up to deliver exciting content. Stay tuned for regular updates, as our dedicated admins are all set to unveil new cards and patchnotes, promising an enriching experience for our community. The wait is over – dive into our website and be the first to discover the latest! #WebsiteLaunch #NewContentComing 🚀👾</p>
     </div>
-    <!-- Add more news articles as needed -->
+    <div class="news-article">
+        <img src="../img/news-image2.png" alt="News Image">
+        <h2>🚀 Join Our Team! 🚀</h2>
+        <p>We're on the lookout for passionate individuals to join our exciting venture. If you're enthusiastic about gaming and ready to make a mark in the industry, we want to hear from you! Check out our careers page and be part of the next big thing. Your journey starts here! #NowHiring #GamingOpportunity 🎮👩‍💻👨‍💻</p>
+    </div>
+    <div class="news-article">
+        <img src="../img/news-image3.png" alt="News Image">
+        <h2>🎉 Exclusive Kickstarter Rewards Await!</h2>
+        <p>As we gear up for our Kickstarter launch, we've prepared some fantastic exclusive rewards for our backers. From limited-edition merchandise to in-game perks, there's something special for everyone who supports us. Join the excitement and be part of our journey from the very beginning! #ExclusiveRewards #KickstarterCampaign 🎁🚀</p>
+    </div>
 </div>
 
 </body>
